2008-10-03  Jaroslav Hajek  <highegg@gmail.com>

	* Cell.cc (Cell::delete_elements): Don't pass second arg to
	Array<T>::maybe_delete_elements.
	* ov-base-mat.cc (octave_base_matrix<MT>::delete_elements): Dtto.

2008-10-02  Jaroslav Hajek  <highegg@gmail.com>

	* Cell.h (Cell::delete_elements): Declare new member function.
	* Cell.h (Cell::delete_elements): Define it.
	* oct-map.cc (Octave_map::maybe_delete_elements): Call delete_elements
	instead of assign with empty Cell.

2008-10-02  John W. Eaton  <jwe@octave.org>

	* pt-arg-list.cc (tree_argument_list::convert_to_const_vector):
	Don't insert undefined elements in return list.

2008-09-30  Jaroslav Hajek  <highegg@gmail.com>

	* ov-str-mat.h (octave-char-matrix-str::assign): Remove declaration.
	* ov-str-mat.cc (octave-char-matrix-str::assign): Remove definition.

2008-09-30  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__magick_read__.cc: Only define
	magick_to_octave_value if HAVE_MAGICK is defined.

2008-09-29  John W. Eaton  <jwe@octave.org>

	* symtab.cc (symbol_table::fcn_info::fcn_info_rep::load_class_method):
	Call load_class_constructor if name and dispatch_type are the same.

2008-09-29  David Bateman  <dbateman@free.fr>

	* symtab.cc (octave_value symbol_table::find_function 
	(const std::string&, tree_argument_list *, const string_vector&,
	octave_value_list&, bool&)): If first character of function name
	is "@" then look for class specific method.

2008-09-26  John W. Eaton  <jwe@octave.org>

	* symtab.cc (out_of_date_check_internal):
	Fix order of arguments in call to load_path::find_method.

2008-09-26  David Bateman  <dbateman@free.fr>

	* ov-class.h (idx_vector index_vector (void) const): Declare new
	maethod.
	* ov-class.cc (idx_vector index_vector (void) const): Define new
	method.
	* (Fismethod): New function.

2008-09-26  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/urlwrite.cc (urlwrite_cleanup_file) New function.
	(urlwrite_delete_file, urlwrite_filename): New static variables.