@@ -1,3 +1,8 @@
+2008-10-06  David Bateman  <dbateman@free.fr>
+
+	* graphics.cc (static bool is_handle (const octave_value&)): Delete.
+	(static octave_value is_handle (const octave_value&)): New function.
+
 2008-10-03  Jaroslav Hajek  <highegg@gmail.com>
 
 	* Cell.cc (Cell::delete_elements): Don't pass second arg to
